--- a/public/Style.css
+++ b/public/Style.css
@@ -9,6 +9,7 @@ body{
     background-size: cover;
     }
     table{
+      width: 60%;
       margin: 50px auto;
       border-collapse: collapse;
     }
@@ -83,7 +84,7 @@ body{
    #Mond {
     display: flex;
     flex: 0.5;
-    margin: 1px;
+    margin: 1rem;
     margin-left: auto;
     right: 0;
     
@@ -91,8 +92,8 @@ body{
 
    #Archon{
     flex: 0.25;
-    width: 100%;
-    height: 100%;
+    width: 60%;
+    height: 60%;
     align-self: flex-start;
     align-self: flex-end;
     margin: 10px;
