--- a/public/Style.css
+++ b/public/Style.css
@@ -8,22 +8,27 @@ body{
   
     background-size: cover;
     }
+
     table{
       width: 60%;
-      margin: 50px auto;
       border-collapse: collapse;
+      margin: 1rem auto;
     }
+
     th{
       background-color: rgb(19, 20, 20);
     }
     td{
        background-color: rgb(19, 20, 20);
     }
+
     table, th, td{
       border: 3px solid rgb(250, 205, 57);
       text-align: center;
+      font-size: 15px;
       color:rgb(244, 242, 239);
-      padding: 10px;}
+      padding: 8px;}
+
    caption{
       caption-side: bottom;
    }
@@ -169,6 +174,7 @@ a:hover {
   background-color: transparent;
   text-decoration: underline;
 }
+
 
 
    
