--- a/public/Style.css
+++ b/public/Style.css
@@ -1,47 +1,19 @@
-    body{
+  body{
       font-family: Genshin;
       font-size: 15px;
       background-image: linear-gradient(to bottom, rgba(146, 226, 237, 0) 0%,rgb(19, 20, 20) 100%),
-      linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgb(19, 20, 20) 110%), url(../Assets/dandelions.jpg);
+      linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgb(19, 20, 20) 110%), url(###);
       background-repeat: no-repeat;
       background-size: cover;
       margin: 0;
     }
 
-    table{
-      width: 60%;
-      border-collapse: collapse;
-      margin: 1rem auto;
-    }
-
-    th{
-      background-color: rgb(19, 20, 20);
-    }
-    td{
-       background-color: rgb(19, 20, 20);
-    }
-
-    table, th, td{
-      border: 3px solid rgb(250, 205, 57);
-      text-align: center;
-      font-size: 15px;
-      color:rgb(244, 242, 239);
-      padding: 8px;}
-
-   @font-face {
+  @font-face {
     font-family: Genshin;
     src: url(../Assets/zh-cn.ttf);
    }
-
-   h1, h2, h3{
-   color:rgb(250, 205, 57);
-   }
-
-   p {
-    color: white;
-   }
-
-   nav{
+   
+  nav{
     padding: 1rem 5%;
     background-color: rgb(19, 20, 20);
     border-bottom: 2px solid rgb(250, 205, 57); 
@@ -52,45 +24,29 @@
     justify-content: flex-end;
    }
 
-   .logo{
-    font-size: 1.8rem;
-    font-weight: 700;
+  .logo{
+     font-size: 1.8rem;
+     font-weight: 700;
+     color:rgb(250, 205, 57);
+     letter-spacing: 1px;
+     margin-right: auto;
+   }
+
+  .links { 
+     list-style: none;
+     display: flex;
+     gap: 2rem;
+     margin-right: 30px;
+   }
+
+  h1, h2, h3{
     color:rgb(250, 205, 57);
-    letter-spacing: 1px;
-    margin-right: auto;
    }
 
-   .links { 
-    list-style: none;
-    display: flex;
-    gap: 2rem;
-    margin-right: 30px;
+  p {
+    color: white;
    }
 
-   .links li a {
-    position: relative;
-    font-size: 1.05rem;
-    font-weight: 500;
-    text-decoration: none;
-    color: rgb(250, 205, 57);
-    transition: 0.3s;
-   }
-
-   .links li a:hover {
-    color: rgb(255, 255, 255);
-    text-shadow: 0 0 10px rgb(196, 242, 248);
-   }
-   
-
-   #head{
-    margin-right: auto;
-    position: right;
-   }
-
-   #logo {
-    position: right;
-   }
-   
   .wrapper{
     padding: 0 15px;
     display: flex;
@@ -109,6 +65,20 @@
     gap: 1rem;
     margin-right: auto;
   }
+   
+  #head{
+    margin-right: auto;
+    position: right;
+   }
+
+  #logo {
+    position: right;
+   }
+
+  hr{
+    height: 2px;
+    background-color: rgb(250, 205, 57);
+  }
 
   .content {
     flex: 1;
@@ -118,19 +88,20 @@
     text-shadow: 0 0 10px rgb(39, 102, 110);
   }
 
-  hr{
-    height: 2px;
-    background-color: rgb(250, 205, 57);
-  }
+  .links li a {
+    position: relative;
+    font-size: 1.05rem;
+    font-weight: 500;
+    text-decoration: none;
+    color: rgb(250, 205, 57);
+    transition: 0.3s;
+   }
 
-  #Vision {
-    float: top;
-    align-items: center;
-    width: 100px;
-    height: 100px;
-
-  }
-
+  .links li a:hover {
+    color: rgb(255, 255, 255);
+    text-shadow: 0 0 10px rgb(196, 242, 248);
+   }
+   
   a:link {
     color: rgb(63, 156, 170);
     background-color: transparent;
@@ -148,8 +119,37 @@
     background-color: transparent;
     text-decoration: underline;
    }
+   
+  table{
+      width: 60%;
+      border-collapse: collapse;
+      margin: 1rem auto;
+    }
 
-   footer {
+  th{
+      background-color: rgb(19, 20, 20);
+    }
+
+  td{
+       background-color: rgb(19, 20, 20);
+    }
+
+  table, th, td{
+      border: 3px solid rgb(250, 205, 57);
+      text-align: center;
+      font-size: 15px;
+      color:rgb(244, 242, 239);
+      padding: 8px;}
+      
+  #Vision {
+    float: top;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    }
+
+
+  footer {
     background-color: rgb(0, 0, 0);
     padding: 15px;
     text-align: center;
