--- a/public/forms.css
+++ b/public/forms.css
@@ -1,11 +1,22 @@
-fieldset{
-   
-}
 
 form{
+    font-family: Genshin;
+    font-size: 15px;
     margin: auto;
     width:30%;
     padding: 1rem;
-    background-color: blue;
+    background-color: rgb(187, 187, 255);
     border-radius: 1rem;
 }
+
+legend{
+    font-family: Genshin;
+    font-size: 20px;
+    font-style: bold;
+    color:  rgb(96, 96, 169);
+}
+
+@font-face {
+    font-family: Genshin;
+    src: url(../Assets/zh-cn.ttf);
+   }
